# SelfTarget

./: Dockerfile  LICENSE.txt  README.md  requirements.txt  server.py  uwsgi.ini
indel_analysis/: combine_results_files.py  combine_results_subdirs.py  plot_all.py
indel_analysis/compute_indels/: README.txt  compile_mapped_null_profiles.py  correct_indelmap_subdir.py  indelmap_subdir.py  partition_pear.py  reformat_indel_profile.py  run_all_compile_nulls.py  run_all_correct_indelmap.py  run_all_incomplete_indelmap.py  run_all_indelmap.py  run_all_map.py  run_all_mapped_split.py  run_all_partition.py  run_all_pear.py  run_all_split_null_mappings.py  run_correct_indel.sh  run_example.py  run_indel.sh  run_indelmap.sh  run_pear.sh  split_mapped_reads_by_id.py  split_missing_mapped_reads_by_id.py  split_null_mappings.py
indel_analysis/endogenous_comparisons/: collect_overbeek_sams.py  compare_overbeek_profiles.py  compute_overbeek_indel_profiles.py  create_overbeek_fasta.py  create_overbeek_templates.py  run_example.py
indel_analysis/i1/: compile_i1.py  plot_i1_summaries.py  run_all_compile_i1.py
indel_analysis/indelmap/: CMakeLists.txt  gen.cpp  gen.h  indel.cpp  indel.h  indelgen.cpp  indelgen_i1.cpp  indelgentarget.cpp  indelmap.cpp  indelmh.cpp  oligo.cpp  oligo.h  readmap.cpp  readmap.h  test.cpp  test.h  version.h.in
indel_prediction/: setup.py
indel_prediction/model_testing/: test_model.py  (+4 more)
scripts/: README.md  requirements.txt  wge_to_ccid.py
selftarget_pyutils/: setup.py
server/: helpers.py  model.py  request_types.py  server.py  swagger.yml  uwsgi.ini
(+72 files in other folders)
